[gd_scene load_steps=15 format=3 uid="uid://c757afy2r1yk1"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_wdgu4"]
[ext_resource type="AudioStream" uid="uid://kf57o0qyfy4x" path="res://assets/sounds/Blip_Select43.wav" id="2_2tsoy"]
[ext_resource type="AudioStream" uid="uid://cfmafdimkjqgx" path="res://assets/sounds/Blip_Select44.wav" id="3_vr1fy"]
[ext_resource type="AudioStream" uid="uid://1ob6s4vmgufn" path="res://assets/sounds/Paddle_Hit_Speed.wav" id="4_ef13i"]
[ext_resource type="AudioStream" uid="uid://bxf4pljenmkn8" path="res://assets/sounds/hiteffect.wav" id="5_somsp"]
[ext_resource type="AudioStream" uid="uid://bcyugqro1rifv" path="res://assets/sounds/Timer_sound.wav" id="6_7jdum"]
[ext_resource type="AudioStream" uid="uid://c55h3se6gmvog" path="res://assets/sounds/Go_Sound.wav" id="7_0b6ax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_603up"]
size = Vector2(16.75, 16)

[sub_resource type="Animation" id="Animation_e0wuc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16.75, 16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.625, 10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpeedEffect:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_do0sp"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(8, 20), Vector2(20, 10), Vector2(20, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, 0), Vector2(0, 5), Vector2(0, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4.75, 16), Vector2(16.75, 6), Vector2(16.75, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(9.625, 10), Vector2(10, 10), Vector2(9.625, 10)]
}

[sub_resource type="Animation" id="Animation_yuv4x"]
resource_name = "moving"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(20, 20), Vector2(20, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16.75, 16), Vector2(16.75, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9.625, 10), Vector2(9.625, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5npd"]
_data = {
"RESET": SubResource("Animation_e0wuc"),
"hit": SubResource("Animation_do0sp"),
"speedIncrease": SubResource("Animation_yuv4x")
}

[sub_resource type="Curve" id="Curve_au2hm"]
_data = [Vector2(0.00561798, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.021978), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_t1gji"]
_data = [Vector2(0.00561798, 1), 0.0, 0.0, 0, 0, Vector2(0.988764, 0.010989), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Ball" type="CharacterBody2D"]
script = ExtResource("1_wdgu4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.625, 10)
shape = SubResource("RectangleShape2D_603up")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)

[node name="BallMovementTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CountDownSoundTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w5npd")
}

[node name="BallHitEffect" type="CPUParticles2D" parent="."]
position = Vector2(15, 10)
emitting = false
amount = 60
lifetime = 0.6
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_max = 720.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_au2hm")

[node name="PaddleHitEffect" type="CPUParticles2D" parent="."]
position = Vector2(10, 10)
emitting = false
amount = 50
lifetime = 0.2
one_shot = true
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.18
spread = 180.0
gravity = Vector2(-980, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_au2hm")

[node name="SpeedEffect" type="CPUParticles2D" parent="."]
position = Vector2(5, 10)
emitting = false
lifetime = 0.2
emission_shape = 1
emission_sphere_radius = 21.69
gravity = Vector2(-980, 0)
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_t1gji")

[node name="BoundaryHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_2tsoy")
bus = &"SFX"

[node name="PaddleHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vr1fy")
volume_db = 4.0
bus = &"SFX"

[node name="PaddleHitSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ef13i")
volume_db = 6.0
bus = &"SFX"

[node name="PaddleHitSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_somsp")
volume_db = 2.0
bus = &"SFX"

[node name="TimerSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7jdum")
bus = &"SFX"

[node name="GoSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0b6ax")
bus = &"SFX"

[connection signal="timeout" from="BallMovementTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CountDownSoundTimer" to="." method="_on_count_down_sound_timer_timeout"]
